0.7.8 - currently working on
- [#4369] Fix: Test failure with master in tx_seminars_cli_MailNotifierTest
- [#3815] Fix: Throw more meaningful Exceptions
- [#4398] Fix: Make the exception about dead models more helpful
- [#3257] Fix: tx_oelib_Model_FrontEndUser::getGender should use "99" for "undefined"

0.7.7 - released 2012-03-04
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4295] Fix: Fix all deprecation log warnings and version-specific unit test failures when running the unit tests on the current Core master
- [#4284] Fix: Fix the translate function for TYPO3 4.6 branch and master
- [#4344] Fix: Non-static methods of the TranslatorRegistry are called statically in the unit tests
- [#4350] Fix: Fix undefined and unused variables
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4306] Fix: Only call logDeprecatedFunction if the TYPO3 version is high enough
- [#4292] Fix: Adapt all version number checks for 4.6
- [#4249] Feature: Log deprecated function calls
- [#4257] Feature: Include the mapper class name in the exception when a mapper is added twice to the mapper registry
- [#4256] Cleanup: Change "EMailAddress" to "EmailAddress" in all function and method names so they are true CamelCase

0.7.6 - released 2011-05-12
- [#4195] Fix: Fix crash in TYPO3 4.6 by calling parent::__construct instead of the old PHP4 style constructors
- [#4169] Fix: Drop unused code and some unused variables

0.7.4 - released 2010-09-24
- [#4129] Fix: Decimals of geo coordinates are cut off in the DB
- [#3248] Fix: A model without UID should automatically be dirty after setData
- [#4111] Fix: tx_oelib_List::sort needs to make the list dirty
- [#4095] Fix: Wrong documentation comment for tx_oelib_ConfigurationRegistry::get
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4128] Change: Improve the exception text about missing subparts
- [#4094] Fix: Use empty configurations in the unit tests