@@ -202,21 +202,21 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 	/////////////////////////////////////////////
 
 	public function testCreateRecursivePageListReturnsAnEmptyStringForNoPagesWithDefaultRecursion() {
-		$this->assertEquals(
+		$this->assertSame(
 			'',
 			tx_oelib_db::createRecursivePageList('')
 		);
 	}
 
 	public function testCreateRecursivePageListReturnsAnEmptyStringForNoPagesWithZeroRecursion() {
-		$this->assertEquals(
+		$this->assertSame(
 			'',
 			tx_oelib_db::createRecursivePageList('', 0)
 		);
 	}
 
 	public function testCreateRecursivePageListReturnsAnEmptyStringForNoPagesWithNonZeroRecursion() {
-		$this->assertEquals(
+		$this->assertSame(
 			'',
 			tx_oelib_db::createRecursivePageList('', 1)
 		);
@@ -235,7 +235,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$uid = $this->testingFramework->createSystemFolder();
 		$this->testingFramework->createSystemFolder($uid);
 
-		$this->assertEquals(
+		$this->assertSame(
 			(string) $uid,
 			tx_oelib_db::createRecursivePageList((string) $uid, 0)
 		);
@@ -246,7 +246,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$this->testingFramework->createSystemFolder($uid1);
 		$uid2 = $this->testingFramework->createSystemFolder();
 
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode($uid1 . ',' . $uid2),
 			$this->sortExplode(
 				tx_oelib_db::createRecursivePageList($uid1.','.$uid2, 0)
@@ -259,7 +259,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$subFolderUid = $this->testingFramework->createSystemFolder($uid);
 		$this->testingFramework->createSystemFolder($subFolderUid);
 
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode($uid.','.$subFolderUid),
 			$this->sortExplode(tx_oelib_db::createRecursivePageList($uid, 1))
 		);
@@ -269,7 +269,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$uid = $this->testingFramework->createSystemFolder();
 		$this->testingFramework->createSystemFolder();
 
-		$this->assertEquals(
+		$this->assertSame(
 			(string) $uid,
 			tx_oelib_db::createRecursivePageList($uid, 0)
 		);
@@ -280,7 +280,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$subFolderUid1 = $this->testingFramework->createSystemFolder($uid);
 		$subFolderUid2 = $this->testingFramework->createSystemFolder($uid);
 
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode($uid.','.$subFolderUid1.','.$subFolderUid2),
 			$this->sortExplode(tx_oelib_db::createRecursivePageList($uid, 1))
 		);
@@ -292,7 +292,7 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$subFolderUid1 = $this->testingFramework->createSystemFolder($uid1);
 		$subFolderUid2 = $this->testingFramework->createSystemFolder($uid2);
 
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode(
 				$uid1.','.$uid2.','.$subFolderUid1.','.$subFolderUid2
 			),
@@ -306,11 +306,11 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$uid = $this->testingFramework->createSystemFolder();
 		$subFolderUid = $this->testingFramework->createSystemFolder($uid);
 
-		$this->assertEquals(
+		$this->assertSame(
 			(string) $uid,
 			tx_oelib_db::createRecursivePageList($uid, 0)
 		);
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode($uid.','.$subFolderUid),
 			$this->sortExplode(tx_oelib_db::createRecursivePageList($uid, 1))
 		);
@@ -320,11 +320,11 @@ class tx_oelib_db_testcase extends tx_phpunit_testcase {
 		$uid = $this->testingFramework->createSystemFolder();
 		$subFolderUid = $this->testingFramework->createSystemFolder($uid);
 
-		$this->assertEquals(
+		$this->assertSame(
 			$this->sortExplode($uid.','.$subFolderUid),
 			$this->sortExplode(tx_oelib_db::createRecursivePageList($uid, 1))
 		);
-		$this->assertEquals(
+		$this->assertSame(
 			(string) $uid,
 			tx_oelib_db::createRecursivePageList($uid, 0)
 		);
