@@ -1,4 +1,5 @@
 0.7.8 - currently working on
+- [#4435] Fix: Database::createRecursivePageList needs to return a string even for integer $startPages and zero $recursionDepth
 - [#4369] Fix: Test failure with master in tx_seminars_cli_MailNotifierTest
 - [#3815] Fix: Throw more meaningful Exceptions
 - [#4398] Fix: Make the exception about dead models more helpful
